Updates from review
+ some renaming
+ more javadoc